# BISAM-dev

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  main.cpp  run_experiments.sh
.github/workflows/: compile-attributes.yml  copy-bisam-checkpoint.yaml  copy-to-BISAM.yml  merge-into-main.yml  move-files-for-package-build.yml  r-cmd-check.yml
R/: RcppExports.R  bisam.R
include/: aberth_solver.h  biasm_model.h  bisam_types.h  fast_polynomial_solver.h  global_storage.h  globals.h  modelselection_strategy.h  mombf_bridge.h  newton_solver.h  result_storage.h  utils.h  validation.h
lib/lasso/: LassoRegression.cpp  LassoRegression.h
mombf/src/: Polynomial.cpp  Polynomial.h  PolynomialRootFinder.cpp  PolynomialRootFinder.h  cstat.cpp  modelSel_regression.cpp  modselIntegrals.h
r-testing-files/: .RData  .Rhistory  analyse-sims.Rmd  generate-sim-datasets.R  install.R  sim_toy_example.R  test-package.R  test.ipynb
r-testing-files/simulation_data/: example_usage.R  example_usage.cpp  sim_extreme_a_n60_t60_nx10.h  sim_extreme_b_n75_t65_nx10.h  sim_extreme_c_n100_t50_nx12.h  sim_large_a_n15_t40_nx05.h  sim_large_b_n20_t35_nx06.h  sim_large_c_n25_t40_nx06.h  sim_large_d_n30_t45_nx07.h  sim_med_a_n10_t20_nx04.h  sim_med_b_n08_t30_nx04.h  sim_med_c_n10_t30_nx05.h  sim_med_d_n12_t35_nx04.h  sim_med_e_n15_t30_nx05.h  sim_rootfind_stepsize_050_n10_t30_nx03.h  sim_rootfind_stepsize_075_n10_t30_nx03.h  sim_rootfind_stepsize_100_n10_t30_nx03.h  sim_rootfind_stepsize_150_n10_t30_nx03.h  sim_rootfind_stepsize_300_n10_t30_nx03.h  sim_rootfind_stepsize_500_n10_t30_nx03.h  sim_rootfind_timelength_t010_n10_t10_nx03.h  sim_rootfind_timelength_t015_n10_t15_nx03.h  sim_rootfind_timelength_t020_n10_t20_nx03.h  sim_rootfind_timelength_t025_n10_t25_nx03.h  sim_rootfind_timelength_t030_n10_t30_nx03.h  sim_rootfind_timelength_t040_n10_t40_nx03.h  sim_rootfind_timelength_t050_n10_t50_nx03.h  sim_rootfind_timelength_t060_n10_t60_nx03.h  sim_rootfind_timelength_t070_n10_t70_nx03.h  sim_rootfind_timelength_t080_n10_t80_nx03.h  sim_rootfind_timelength_t090_n10_t90_nx03.h  sim_rootfind_timelength_t100_n10_t100_nx03.h  sim_rootfind_timelength_t110_n10_t110_nx03.h  sim_rootfind_timelength_t120_n10_t120_nx03.h  sim_small_a_n03_t20_nx03.h  sim_small_b_n05_t15_nx02.h  sim_small_c_n05_t20_nx03.h  sim_small_d_n05_t25_nx03.h  sim_small_e_n07_t20_nx04.h  sim_small_f_n08_t25_nx03.h  (+5 more)
simulations/: cumulative_gains_study_aberth_timing.csv  cumulative_gains_study_aberth_validation.csv  cumulative_gains_study_estimates.csv  cumulative_gains_study_timing.csv  multithreading_timing.csv  multithreading_validation.csv  performance_test_v1_estimates.csv  performance_test_v1_timing.csv  performance_test_v1_validation.csv  root_finder_step_size_timing.csv  root_finder_step_size_validation.csv  root_finding_estimates.csv  root_finding_timing.csv  root_finding_validation.csv  step_size_fixed_timing.csv  step_size_fixed_validation.csv
src/: Makevars  Makevars.win  RcppExports.cpp  biasm_model.cpp  bisam_rcpp.cpp  bisam_rcpp.h  fast_polynomial_solver.cpp  modelselection_strategy.cpp  mombf_bridge.cpp  utils.cpp
validation_include/: result_storage.h  validation.h
